# Saudi-NCM

./: README.md
Dust_realtime/WRF00Z/: atpMergedBT.dot  atpMergedBT_line.dot  namelist.input  namelist.input-realtime  namelist.input-realtime-RUCLSM  namelist.input-realtime-bak  namelist.input-realtime-bak-v0  namelist.input-realtime-noChem  namelist.input-realtime-v0  namelist.input-realtime-v1  namelist.output  runreal_FNL_realtime.csh  runreal_realtime.info  runreal_realtime.sh  runreal_realtime_noChem.sh  runreal_realtime_v0.sh  runreal_runwrf_realtime.sh  runreal_runwrf_realtime_makeup.sh  runrealwrf.err  runrealwrf.out  runwrf_FNL_realtime.csh  runwrf_realtime.info  runwrf_realtime.sh  runwrf_realtime_noChem.sh  runwrf_realtime_noChem_v1.sh  runwrf_realtime_v0.sh  runwrf_realtime_v1.sh  runwrf_realtime_v2.sh  submit_run_real.info  submit_run_real.sh  submit_run_real_wrf.sh  submit_run_wrf.info  submit_run_wrf.sh  testfile.sh  time.info  time1.info  time2.info  time3.info  time4.info  time5.info  (+1 more)
GMODJOBS/GWPME/: flexinput.config.pm  flexinput.job.pm  flexinput.pl  hy3dvarinput.pl  newfilesuffix  nodes_available  nodes_available_all  nodes_available_post  postprocinput.pl  statsinput.pl  verifyinput.pl
GMODJOBS/GWPME/config/: cycles.cfg  cycles_scrub.cfg  qc_out.cfg
GMODJOBS/GWPME/hy3dvar_run/: VARBC.in_d01  VARBC.in_d02
GMODJOBS/GWPME/namelists/: namelist.input  namelist.wps  namelist.wps.bldr  wps.nl.template  wrf.nl.template  wrf.nl.template.old  wrf.nl.template.save
GMODJOBS/GWPME/postprocs/: Earth..4.names  Mdomain1.summer.GRM  Mdomain1.winter.GRM  Mdomain2.summer.GRM  Mdomain2.winter.GRM  Mdomain3.summer.GRM  Mdomain3.winter.GRM  coldstart.ps  formPME.out  image_fields.pl  stationmap_new.list  status.template  wrf2grib.param  wrf2grib.param.big  wrf2grib.param.tatiana
GMODJOBS/GWPME/scripts/: README.src_dir_info  clone_obs.csh  coldstart.csh  env_vars.csh  moveMCycles.csh  q.out  reservation.csh  slurm-8710640.out  submitCycleMM.csh  submitCycleMM.csh.save  submitMCycles.csh  trigger-exec.csh
GMODJOBS/GWPME/web/: index.html  js_file  js_file.met  sndg_file  ts_file
dust_plots/: plot_AOD_600nm.csh  plot_AOD_600nm.ncl  plot_AOD_600nm.pl  plot_DUST_all.ncl  plot_DUST_all_d100Z.pl  plot_DUST_all_d112Z.pl  plot_DUST_all_d200Z.pl  plot_DUST_all_d20Z.pl  plot_DUST_all_d212Z.pl  plot_DUST_surface.ncl  plot_DUST_surface.pl  run_0Z.sh  run_12Z.sh
home/: scrub
home/cron/: crontab.dm  crontab.now  tmp
home/datbin/: PushGrbToGamep.sh  python_scrub.py  scrub_files
home/datbin/archive/: pmeobs_tar.cfg  pmeobs_tar.sh
home/datbin/ingest/: GetNCEPPreB.pl  GetSSTFile.pl  IngestUtils.pm  curl_madis.pl  decode_ncep_prepbufr.csh  decode_ncep_prepbufr.new.csh  downloadGFS.py  downloadGFS2015.py  downloadGFS4.py  downloadGFS_old.py  ecmwfp  ftpsites  getNcepObsFilesCurl.pl  get_ncepPreBufr.csh  get_ncep_http.pl  get_pmeobs.pl  get_pmeobs_gamep  get_radar_gamep  get_sst083.csh  getecmwf  ncepIngestConfig.xml  ncepObsDecode.pl  ssh_commands  wget_satRadiance.pl
home/datbin/params/: getNcepObsFilesCurl.params.ops  ncepObsDecode.xml
home/datbin/py4wrf/: .plotmeteogram14.py.swp  README  adaptedpylib.py  archivewrf.py  assemblewrffcst.py  atmoscons.py  core  extract_wrf2d.py  filechecking.py  get_metarksa.py  icao_sa_reword.txt  latlon2ij.dic  metar_OEDF_2014030412.txt  metar_OEDF_2014030413.txt  metar_OEDF_2014030418.txt  metar_sa_stations.csv  metar_sa_stations.txt  meteograms14.py  meteograms14.py-original  run_meteos.sh  (+21 more)
home/distrib/: push2gamep.sh  push2webserver.sh
wrf/CONFIG_FILES/: cshrc_sizes.mm5sys.GRM  cshrc_user.mm5sys  cshrc_user.mm5sys.GRM
wrf/CONSTANT_FILES/: errtable_avnfct_tropics.r3dv.txt  wrfvar.namelist.template
wrf/EXECUTABLE_ARCHIVE/: MustHaveDir  README
wrf/PERL/: Dirs.pm  MMPerlLog.perl  Makefile  TimeUtil.pm
wrf/POSTPROCS/: _Makefile  build_postprocs.csh  conf_generic.pl  conv2gif.pl  conv2gif_obs.pl  conv_img.pl  do_ensplots2.csh  do_gbc.pl  do_gempak.pl  do_grib.pl  do_grid_plots.pl  do_grid_plots_gcat.pl  do_html.pl  do_mdv.pl  do_metcm.pl  do_naps.pl  do_naps_default.pl  do_netcdf.pl  do_output.pl  do_output_archive.pl  do_output_gcat.pl  do_output_gmod.pl  do_output_gmod_gordon.pl  do_output_mean.pl  do_output_new.pl  do_output_range.pl  do_plots+obs.pl  do_plots+obs_gcat.pl  do_plots.pl  do_plots_archive.pl  do_plots_ncl.pl  do_plots_tarsum.pl  do_sams_sites.pl  do_scipuf.pl  do_scipuf_gcat.pl  do_scipuf_prf_gcat.pl  do_sites+bias.pl  do_sites.pl  do_sites_gcat.pl  do_wrf2grib.pl  (+31 more)
wrf/PYTHON/: Makefile  README
wrf/rtfdda/: Makefile
wrf/rtfdda/src/anen/: CHANGES.txt  Makefile.am  Makefile.in  README.txt  compile_gnu_par.csh  compile_gnu_seq.csh  compile_ifort_openmpi.csh  compile_ifort_seq.csh  compile_pgf95_seq.csh  config.status  configure  configure.ac  libtool
wrf/rtfdda/src/anen/autom4te.cache/: output.0  traces.0
wrf/rtfdda/src/anen/code/: Makefile  Makefile.am  Makefile.dep  Makefile.in  analog_input.nml  compute_wind.f90  find_analog_v1.f90  kf_analog.f90  kf_luca.f90  main_analog.F90  only_analog.f90  read_point_data.f90  read_var.f90  shell-sort.bc.f90  std_dev.f90  stdevTNcirc.f90  wind_dir_error.f90
wrf/rtfdda/src/anen/input/atec2/: analog_input.nml  crtc.verif.20141031.2sta.cdf  weight_ini.txt
wrf/rtfdda/src/anen/input/atec4_oper/: analog_input.nml  veri.150602.000000.cdf  weight_ini.txt
wrf/rtfdda/src/anen/lib/: Makefile  Makefile.am  Makefile.dep  Makefile.in  config.f90  count_substrings.f90  depends.0414  f90_config.gfortran.f90  f90_config.ifort.f90  getnc_dim_size.f90  ieee_supplement.f90  lowercase.f90  netcdf_check2.f90  netcdf_sup.f90  nf90_get_att_trim.f90  nf90_get_var_trim.f90  permute.f90  permute.f90_old  permute_4d.f90  stdlit.f90
wrf/rtfdda/src/anen/output/atec2/netcdf/: an_en_output.nc
wrf/rtfdda/src/anen/setup/: gfortran  ifort  ifort.O1  ifort.O1.lnx  ifort_debugste  ifort_fast  ifort_new  setup.generic.gfortran  setup.linux64.ifort  setup_env.bat
wrf/rtfdda/src/anen/verification_scripts/: README_ver.scripts.txt  anen2verif.r  calling_verification_nops.r  library_verification.r
(+2071 files in other folders)
